--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
   </head>
-  <body>
-    <h2 class="title">Entries:</h2>
-    <ol class="jindex">
-      <li>
-        <a href="entries/sep27.html" class="linkstyle">September 27, 2017</a>
-      </li>
-    </ol>
 
+  <body>
+    <div class="container">
+      <div class="containermargin">
+        <header class="eheader">
+          <h1 class="dateHeader">Chris Nelson</h1>
+          <p class="popit logo">CSET</p>
+        </header>
+        <h2 class="title">Entries:</h2>
+          <ol class="jindex">
+            <li>
+              <a href="entries/sep27.html" class="linkstyle">September 27, 2017</a>
+            </li>
+          </ol>
+        </div>
+    </div>
   </body>
 
 </html>
