added journal entry

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <li>
               <a href="entries/sep27.html" class="linkstyle">September 27, 2017</a>
             </li>
+            <li>
+              <a href="entries/oct6.html" class="linkstyle">October 6, 2017</a>
+            </li>
           </ol>
         </div>
     </div>
