added the third entry, forgot to create branch though :(

--- a/entries/sep27.html
+++ b/entries/sep27.html
@@ -46,10 +46,10 @@
           </blockquote>
 
           <p class="popit">
-            This creates the tranistion when the element is clicked on. In addition, I found a way to make the code stand out in html, which I’ve been using in the previous examples. I currently do not know if this is the best way or correct way to do it, but I will find out in the coming days and correct my actions if needed.
+            This creates the transition when the element is clicked on. In addition, I found a way to make the code stand out in html, which I’ve been using in the previous examples. I currently do not know if this is the best way or correct way to do it, but I will find out in the coming days and correct my actions if needed.
           </p>
           <p class="popit">
-            Finally, we have also learned about the CSS reset which I will be implementing into all my future projects and making it a force of habit for front-end delopment.
+            Finally, we have also learned about the CSS reset which I will be implementing into all my future projects and making it a force of habit for front-end development.
           </p>
         </div>
         <a href="../index.html" class="linkstyle back">Back</a>
