--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <li>
               <a href="entries/oct6.html" class="linkstyle">October 6, 2017</a>
             </li>
+            <li>
+              <a href="entries/oct14.html" class="linkstyle">October 14, 2017</a>
+            </li>
           </ol>
         </div>
     </div>
