added oct 20 entry

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <li>
               <a href="entries/oct14.html" class="linkstyle">October 14, 2017</a>
             </li>
+            <li>
+              <a href="entries/oct20.html" class="linkstyle">October 20, 2017</a>
+            </li>
           </ol>
         </div>
     </div>
