--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <li>
               <a href="entries/oct20.html" class="linkstyle">October 20, 2017</a>
             </li>
+            <li>
+              <a href="entries/oct29.html" class="linkstyle">October 29, 2017</a>
+            </li>
           </ol>
         </div>
     </div>
