--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <li>
               <a href="entries/oct29.html" class="linkstyle">October 29, 2017</a>
             </li>
+            <li>
+              <a href="entries/nov12.html" class="linkstyle">November 12, 2017</a>
+            </li>
           </ol>
         </div>
     </div>
