--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <li>
               <a href="entries/nov12.html" class="linkstyle">November 12, 2017</a>
             </li>
+            <li>
+              <a href="entries/nov28.html" class="linkstyle">November 28, 2017</a>
+            </li>
           </ol>
         </div>
     </div>
