added new entry

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <li>
               <a href="entries/nov28.html" class="linkstyle">November 28, 2017</a>
             </li>
+            <li>
+              <a href="entries/dec4.html" class="linkstyle">December 4, 2017</a>
+            </li>
           </ol>
         </div>
     </div>
