--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <li>
               <a href="entries/dec4.html" class="linkstyle">December 4, 2017</a>
             </li>
+            <li>
+              <a href="entries/dec12.html" class="linkstyle">December 12, 2017</a>
+            </li>
           </ol>
         </div>
     </div>
