--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <li>
               <a href="entries/dec12.html" class="linkstyle">December 12, 2017</a>
             </li>
+            <li>
+              <a href="entries/dec14.html" class="linkstyle">December 14, 2017</a>
+            </li>
           </ol>
         </div>
     </div>
