--- a/entries/template.html
+++ b/entries/template.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>December 14, 2017</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
   </head>
