--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <li>
               <a href="entries/dec14.html" class="linkstyle">December 14, 2017</a>
             </li>
+            <li>
+              <a href="entries/pagetwo.html" class="linkstyle">Project</a>
+            </li>
           </ol>
         </div>
     </div>
