--- a/entries/pagetwo.html
+++ b/entries/pagetwo.html
@@ -72,10 +72,10 @@
 
     <script src="../scripts/jquery-3.2.1.js"></script>
     <script src="../scripts/picker.js"></script>
-    <script
+    <!-- <script
   src="http://code.jquery.com/color/jquery.color-2.1.2.js"
   integrity="sha256-1Cn7TdfHiMcEbTuku97ZRSGt2b3SvZftEIn68UMgHC8="
-  crossorigin="anonymous"></script>
+  crossorigin="anonymous"></script> -->
   </body>
 
 </html>
