pushing new files

--- a/index.html
+++ b/index.html
@@ -3,56 +3,26 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Github Webpage Journal</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
+    <title>The Digital Notebook of Chris Nelson</title>
+    <link href="https://fonts.googleapis.com/css?family=Lora|Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
-    <div class="container">
-      <div class="containermargin">
-        <header class="eheader">
-          <h1 class="dateHeader">Chris Nelson</h1>
-          <p class="popit logo">CSET</p>
-        </header>
-        <h2 class="title">Entries:</h2>
-          <ol class="jindex">
-            <li>
-              <a href="entries/sep27.html" class="linkstyle">September 27, 2017</a>
-            </li>
-            <li>
-              <a href="entries/oct6.html" class="linkstyle">October 6, 2017</a>
-            </li>
-            <li>
-              <a href="entries/oct14.html" class="linkstyle">October 14, 2017</a>
-            </li>
-            <li>
-              <a href="entries/oct20.html" class="linkstyle">October 20, 2017</a>
-            </li>
-            <li>
-              <a href="entries/oct29.html" class="linkstyle">October 29, 2017</a>
-            </li>
-            <li>
-              <a href="entries/nov12.html" class="linkstyle">November 12, 2017</a>
-            </li>
-            <li>
-              <a href="entries/nov28.html" class="linkstyle">November 28, 2017</a>
-            </li>
-            <li>
-              <a href="entries/dec4.html" class="linkstyle">December 4, 2017</a>
-            </li>
-            <li>
-              <a href="entries/dec12.html" class="linkstyle">December 12, 2017</a>
-            </li>
-            <li>
-              <a href="entries/dec14.html" class="linkstyle">December 14, 2017</a>
-            </li>
-            <li>
-              <a href="entries/pagetwo.html" class="linkstyle">Project</a>
-            </li>
-          </ol>
-        </div>
-    </div>
+  <body
+    <nav>
+      <a href="">Placeholder 1</a>
+      <a href="">Placeholder 2</a>
+      <a href="">Placeholder 3</a>
+      <a href="">Placeholder 4</a>
+    </nav>
+    <h1>The Digital Notebook of Chris Nelson</h1>
+    <h2>Under Construction</h2>
+    <p>
+      The propose of this GitHub page is to track what I've been doing, learning, or anything that I found interesting. I will primarily be focusing on the langauges that I have dealt with while earning my degree: python, php, mysql, html, css/sass, javascript/jquery. But this is only the start, I hope to branch out to newer langauges once I get back into the swing of things. It is my hope that this website will constantly be evolving and improving the practice I hope to gain from this little endeavor. I hope to be able to use the site as a sort of digital notebook, where I can go back and check/refresh on the things that I have done.
+    </p>
+    <footer>
+      Chris Nelson &copy; 2019
+    </footer>
   </body>
 
 </html>
