Just some basic stuff, wanted to get it pushed to Github to make sure everything is working

--- a/index.html
+++ b/index.html
@@ -5,24 +5,40 @@
     <meta charset="utf-8">
     <title>The Digital Notebook of Chris Nelson</title>
     <link href="https://fonts.googleapis.com/css?family=Lora|Roboto&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
 
-  <body
-    <nav>
-      <a href="">Placeholder 1</a>
-      <a href="">Placeholder 2</a>
-      <a href="">Placeholder 3</a>
-      <a href="">Placeholder 4</a>
-    </nav>
-    <h1>The Digital Notebook of Chris Nelson</h1>
-    <h2>Under Construction</h2>
-    <p>
-      The propose of this GitHub page is to track what I've been doing, learning, or anything that I found interesting. I will primarily be focusing on the langauges that I have dealt with while earning my degree: python, php, mysql, html, css/sass, javascript/jquery. But this is only the start, I hope to branch out to newer langauges once I get back into the swing of things. It is my hope that this website will constantly be evolving and improving the practice I hope to gain from this little endeavor. I hope to be able to use the site as a sort of digital notebook, where I can go back and check/refresh on the things that I have done.
-    </p>
-    <footer>
-      Chris Nelson &copy; 2019
-    </footer>
+  <body>
+    <p></p>
+    <div id="container">
+      <nav id="navBar">
+        <a href="pages/about.html">About Me</a>
+        <a href="">Placeholder 2</a>
+        <a href="">Placeholder 3</a>
+        <a href="https://github.com/Cnels1986" target="_blank">GitHub</a>
+      </nav>
+
+      <h1 id="mainTitle">The Digital Notebook of Chris Nelson</h1>
+      <h2 class="title">Under Construction</h2>
+      <p class="content">
+        The propose of this GitHub page is to track what I've been doing, learning, or anything that I found interesting. I will primarily be focusing on the langauges that I have dealt with while earning my degree: python, php, mysql, html, css/sass, javascript/jquery. But this is only the start, I hope to branch out to newer langauges once I get back into the swing of things. It is my hope that this website will constantly be evolving and improving the practice I hope to gain from this little endeavor. I hope to be able to use the site as a sort of digital notebook, where I can go back and check/refresh on the things that I have done.
+      </p>
+
+      <section>
+        <h3>Entry 1: Fixing my terminal</h3>
+        <p>
+          This will be my first entry into this thing so I figured I would do it on some basic things, such as my terminal. After graduating we were able to keep our MacBook Pros but we figured we should create new users on the computers as to not have to deal with whatever settings and software the school had loaded on them. After messing around and fixing my settings to how I liked them, I discovered that my terminal was basic and had nothing to it.
+        </p>
+        <p>
+          I knew that I am able to customize it, for example having different colors, changing the prompt name, and one that I found very useful is showing the current branch of a Git project that your working on.
+        </p>
+      </section>
+      <footer>
+        <p>Chris Nelson &copy; 2019</p>
+      </footer>
+    </div>
   </body>
 
 </html>
